2005-02-11 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/gnet-drc2.scm: Use stdout if the output filename is "-".
	  Updated documentation showing this behaviour.

2005-02-11  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/gnetlist.c (main_prog): Adapted for new toplevel and page APIs
	in libgeda.
	
2005-02-08 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/gnet-drc2.scm:
	  Use a parameter instead of the quiet mode of gnetlist so 
          gnetlist doesn't return a non-zero value when there are only
	  warnings. This parameter is 'ignore-warnings-in-return-value'.
	
2005-02-08 Carlos Nieves Onega <cnieves@iespana.es>

	* include/globals.h, src/globals.c, src/g_netlist.c, 
	  src/parsecmd.c, src/gnetlist.c: 
	  Added '-O' option allowing to pass parameters to the backend.
	
2005-02-04 23:14  danmc

	* configure.ac, src/g_netlist.c, src/g_rc.c, src/g_register.c,
	  src/globals.c, src/gnetlist.c, src/i_vars.c, src/parsecmd.c,
	  src/s_cpinlist.c, src/s_hierarchy.c, src/s_misc.c, src/s_net.c,
	  src/s_netattrib.c, src/s_netlist.c, src/s_rename.c,
	  src/s_traverse.c, src/vams_misc.c, utils/mk_verilog_syms.c: add
	  support for Electric Fence debugging, enabled by --enable-efence,
	  and dmalloc debugging, enabled by --enable-dmalloc.  Both are off
	  by default.

2005-02-04  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/g_netlist.c, src/gnetlist.c, src/i_vars.c:
	* src/parsecmd.c, src/s_hierarchy.c, src/s_netattrib.c:
	* src/s_netlist.c, src/s_traverse.c: Replaced u_basic_strdup() and 
	u_basic_strdup_multiple() by GLib functions.
	
	* src/gnetlist.c: Made it use GLib's G_DIR_SEPARATOR* instead of 
	libgeda's *_SEPARATER_*.

2005-02-03 12:49  danmc

	* scheme/: gnet-PCB.scm, gnet-PCBboard.scm, gnet-allegro.scm,
	  gnet-bae.scm, gnet-bom.scm, gnet-bom2.scm, gnet-drc.scm,
	  gnet-drc2.scm, gnet-eagle.scm, gnet-geda.scm, gnet-gossip.scm,
	  gnet-gsch2pcb.scm, gnet-maxascii.scm, gnet-pads.scm,
	  gnet-partslist-common.scm, gnet-partslist1.scm,